# optim

./: .gitignore  .gitmodules  .readthedocs.requirements.txt  .readthedocs.yml  .travis.yml  CMakeLists.txt  Makefile.in  NOTICE.txt  README.md  configure  my_change.txt  package.xml
.github/workflows/: main.yml
cmake/: Findarmadillo.cmake
docs/: Doxyfile  environment.yml
docs/source/: autodiff.rst  box_constraints.rst  conf.py  examples_and_tests.rst  index.rst  installation.rst  line_search.rst  settings.rst  test_functions.rst
docs/source/_static/: main_stylesheet.css
docs/source/api/: bfgs.rst  broyden.rst  broyden_df.rst  cg.rst  constrained_algo_index.rst  convex_algo_index.rst  de.rst  gd.rst  lbfgs.rst  metaheuristic_algo_index.rst  newton.rst  nm.rst  pso.rst  root_finding_algo_index.rst  simplex_algo_index.rst  sumt.rst
examples/: logit_reg.cpp
examples/autodiff/: autodiff_forward_sphere.cpp  autodiff_reverse_sphere.cpp
include/: optim.hpp
include/constrained/: constrained.hpp  sumt.hpp
include/generic/: generic.hpp  generic_constr_optim.hpp  generic_optim.hpp
include/line_search/: line_search.hpp  more_thuente.hpp  wolfe.hpp
include/misc/: OPTIM_OPTIONS.hpp  bounds_check.hpp  determine_bounds_type.hpp  error_reporting.hpp  error_reporting.ipp  jacobian_adjust.hpp  logit_transform.hpp  misc.hpp  numerical_gradient.hpp  numerical_hessian.hpp  optim_matdefs.hpp  optim_misc.hpp  optim_options.hpp  optim_structs.hpp  optim_trace.hpp  transform_vals.hpp  unit_vec.hpp  unit_vec.ipp
include/misc/matrix_ops/: abs.hpp  abs_max.hpp  access.hpp  accu.hpp  array_add.hpp  array_div.hpp  array_mult.hpp  as_scalar.hpp  cos.hpp  cout.hpp  diagmat.hpp  diagvec.hpp  dot.hpp  endl.hpp  eval.hpp  exp.hpp  eye.hpp  get_sort_index.hpp  hadamard.hpp  index_min.hpp  inv.hpp  is_finite.hpp  log.hpp  max.hpp  min.hpp  ncol.hpp  norm.hpp  ones.hpp  pow.hpp  randi.hpp  randn.hpp  randu.hpp  reset_negative_values.hpp  set_size.hpp  size.hpp  solve.hpp  sqrt.hpp  sum.hpp  transpose.hpp  zeros.hpp
include/stats/: optim_stats.hpp  seed_values.hpp
include/unconstrained/: bfgs.hpp  cg.hpp  de.hpp  de_prmm.hpp  gd.hpp  gd.ipp  ipso.hpp  lbfgs.hpp  nelder_mead.hpp  newton.hpp  nm.hpp  optim_unconstrained.hpp  pso.hpp  pso_dv.hpp  unconstrained.hpp
include/unconstrained/simplex/: nelder_mead.hpp
include/zeros/: broyden.hpp  broyden_df.hpp  optim_zeros.hpp  zeros.hpp
include/zeros/broyden/: broyden.hpp
src/constrained/: sumt.cpp
src/constrained/sumt/: sumt.cpp
src/generic/: generic_constr_optim.cpp  generic_optim.cpp
src/line_search/: more_thuente.cpp  wolfe.cpp
src/misc/: logit_transform.cpp
src/unconstrained/: bfgs.cpp  cg.cpp  de.cpp  de_prmm.cpp  gd.cpp  ipso.cpp  lbfgs.cpp  nelder_mead.cpp  newton.cpp  nm.cpp  pso.cpp  pso_dv.cpp
src/unconstrained/bfgs/: bfgs.cpp
src/zeros/: broyden.cpp  broyden_df.cpp
tests/: clean  cov_setup  run_cov  setup  tests_clean
tests/constrained/: Makefile.in  configure  sumt.cpp  sumt_test.cpp
tests/constrained/sumt/: sumt_test.cpp
tests/generic/: Makefile.in  booth_test.cpp  constr_test.cpp  generic_constr_optim.cpp  generic_optim.cpp
tests/misc/: Makefile.in  configure  cov_check  error_reporting.cpp  jacobian_adjust.cpp  logit_transform.cpp  numerical_gradient.cpp  numerical_hessian.cpp
tests/test_fns/: constr_test_fn_1.hpp  constr_test_fn_2.hpp  constr_test_fn_3.hpp  test_fns.hpp  test_solutions.hpp  unconstr_test_fn_1.hpp  unconstr_test_fn_10.hpp  unconstr_test_fn_2.hpp  unconstr_test_fn_3.hpp  unconstr_test_fn_4.hpp  unconstr_test_fn_5.hpp  unconstr_test_fn_6.hpp  unconstr_test_fn_7.hpp  unconstr_test_fn_8.hpp  unconstr_test_fn_9.hpp  zeros_test_fn_1.hpp  zeros_test_fn_2.hpp
tests/test_setup/: Makefile.in  clean  configure.in  cov_check  run_cov  setup
tests/unconstrained/: Makefile.in  bfgs.cpp  cg.cpp  cg_test.cpp  configure  cov_check  de.cpp  de_prmm.cpp  de_test.cpp  gd.cpp  ipso.cpp  lbfgs.cpp  nelder_mead.cpp  nelder_mead_test.cpp  newton.cpp  newton_logit_reg.cpp  nm.cpp  pso.cpp  pso_dv.cpp
tests/unconstrained/bfgs/: bfgs_test.cpp
tests/unconstrained/de/: de_test.cpp
tests/unconstrained/simplex/: nelder_mead_test.cpp
tests/zeros/: Makefile.in  broyden.cpp  broyden_df.cpp  broyden_test_1.cpp  broyden_test_2.cpp  configure  cov_check
