<?xml version="1.0"?>
<package format="2">
    <name>optim</name>
    <version>0.0.0</version>
    <description>Non linear Optimization libraries</description>

    <maintainer email="jaina488@gmail.com">Akshit Jain</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
<!--    <build_depend>armadello</build_depend>-->

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
